# clampforklift_ws2

./: README.md  install.sh
auto_start/: CMakeLists.txt  README.md  package.xml
auto_start/launch/: record.launch  ui.launch
auto_start/sh/: forklift_panel.desktop  restart.sh  start.sh  start_sim_forklift.sh  tur.sh  tur.sh.x  tur.sh.x.c  vcan_create.sh  vcan_create.sh.x  vcan_create.sh.x.c  vcan_delete.sh
auto_start/ui/: forklift_start.py  forklift_start_sim.py  pub_ui.py  record_ui.py
base_learn/: CMakeLists.txt  package.xml
base_learn/launch/: display.launch
base_learn/src/: parser.cpp
base_learn/urdf/: GRobot.urdf  hello_urdf.urdf
car_ori_display/config/: electric_fence_config.yaml
car_ori_display/launch/: electric.launch  sim.launch
car_ori_display/rviz/: display.rviz  ui_9.12.rviz  work.rviz
car_ori_display/scripts/: electric_fence.py  fault_diagnosis.py  fault_diagnosis_test.py  intetnet_test.py
car_ori_display/src/: bag_recorder_panel.cpp  diagnosis_panel.cpp
clamp_fork/: CMakeLists.txt  package.xml
clamp_fork/cfg/: smart_control_config1.yaml
clamp_fork/config/: pallet.txt
clamp_fork/launch/: clamp_control.launch  controller_manager.launch  cotton_joy.launch  model_test.launch  one_step_start1.sh  spawn.launch  spawn_fork.launch  spawn_fork_other.launch
clamp_fork/maps/: 10.23_2.0.yaml  map.yaml  map_10.17.pgm  map_10.17.yaml
clamp_fork/meshes/: cotton.dae  cotton_new2.mtl  m4.mtl
clamp_fork/param/: dwa_local_planner_params.yaml
clamp_fork/scripts/: cmdvel2gazebo_fork.py  control_fork.py  get_gazebo_loc.py  map_to_base.py  map_to_world.py  model_state.py  p3d_to_odom_tf.py  process_all.py  pub_odom.py  pub_tf.py  pub_twist.py  set_cotton_arrange.py  spawn_gazebo.py  te.py
clamp_fork/urdf/: fork.xacro  scout_wheel_type1.xacro  test.xacro
clamp_fork/worlds/: 2024.10.15.world  README.md  data_camera.world  grey.world  light_cotton.world  smach_runner2.world  smach_test.world  test_nav.world  vehicle_test5.world  vehicle_test6.world  vehicle_test7.world
control/: CMakeLists.txt  package.xml
control/config/: controlparams.yaml  vehicleParams.yaml  wirecontrol_params.yaml
control/include/control/: Control_FSM.h  can_feedback.h  can_pub.h  pid_control.h  stanley_control.h
control/launch/: can_pub.launch  mpc_controller.launch  vehicle_control.launch
control/map/: map.pgm
control/scripts/: README.md  angle_calib.py  calib2.txt  calibration_steer_sim.py
control/src/: Control_FSM.cpp  can_feedback_pub.cpp  can_pub.cpp  pid_control.cpp  stanley_control.cpp
forklift_description/launch/: real_clamp.launch
forklift_description/rviz/: clamp.rviz
forklift_description/urdf/: real_clamp_fork.xacro
forklift_gazebo/: CMakeLists.txt  package.xml
forklift_gazebo/config/: controller.yaml  controller_2.yaml  detect.rviz  scout_v2_control.yaml  show_robot.rviz
forklift_gazebo/launch/: clamp_forklift_sim.launch  clamp_test.launch  forklift_gazebo.launch  forklift_grey_world.launch  forklift_sim.launch  gazebo_sim.launch  lidar_full_gazebo.launch  spawn_fork.launch  ui.launch
forklift_gazebo/meshes/: cotton.stl  (+2 more)
forklift_nav/: CMakeLists.txt  package.xml
hybrid_a_star/: CMakeLists.txt  package.xml  readme.md
hybrid_a_star/config/: 2.0planner_params.yaml  planner_params.yaml
hybrid_a_star/include/3rd/: backward.hpp
hybrid_a_star/include/hybrid_a_star/: hybrid_a_star.h  hybrid_a_star_flow.h
hybrid_a_star/launch/: run_hybrid_a_star.launch
hybrid_a_star/rviz/: display_hybrid_astar.rviz
hybrid_a_star/scripts/: map.pgm  map.yaml  map_pub.py  ros_BS_curve.py
hybrid_a_star/src/: costmap_subscriber.cpp  hybrid_a_star.cpp  hybrid_a_star_flow.cpp  run_hybrid_astar.cpp
joy_control/: CMakeLists.txt  package.xml
keyboard_control/: CMakeLists.txt  package.xml
lidar_detect_interfaces/: CMakeLists.txt  package.xml
lidar_detect_interfaces/msg/: CloudCluster.msg  DetectedObject.msg  LidarDetectObject.msg
lidar_detection_track/: CMakeLists.txt  package.xml
local_map/: CMakeLists.txt  package.xml
local_map/launch/: local_map.launch  local_map_pub.launch
local_map/scripts/: lidar_range.py  local_map.py
local_map/src/: obstacle_perception_node.cpp
local_plan/: CMakeLists.txt  package.xml
local_plan/config/: 3.0planner_params.yaml  4.0planner_params.yaml  planner_params.yaml
local_plan/include/hybrid_a_star/: PathSubscriber.h  hybrid_a_star.h  hybrid_a_star_flow.h  rs_path.h  state_node.h
local_plan/launch/: global_plan_rviz.launch  local_plan.launch
local_plan/src/: LocalMapPublisher.cpp  costmap_subscriber.cpp  hybrid_a_star.cpp  hybrid_a_star_flow.cpp  point_pub_srv.cpp  pub_point.cpp  rs_path.cpp  run_hybrid_astar.cpp
mapviz/: README.md
perception/: CMakeLists.txt
smach_fork/: CMakeLists.txt  package.xml
smach_fork/config/: output.yaml  smach.yaml
smach_fork/data/: current_point.csv  saved_points.txt  state_times.csv
smach_fork/dot/: 20250108-145555.dot  20250108-145616.dot  20250108-145618.dot  20250111-165734.dot  20250111-165813.dot  20250111-165816.dot
smach_fork/launch/: smach_fork.launch  smach_fork_custom.launch
smach_fork/scripts/: 2-cotton.py  4-cotton.py  cotton_2.py  cotton_3.py  point_test.py  smach_sim_state.py  smach_sim_tasks7.py  smach_sim_tasks_custom.py  smach_viewer.py  smach_visual.py  task_smach.py  task_smach_custom.py  test_smach.py
smach_fork/scripts/bak/: cli_demo.py  state_machine_tasks.py
smach_fork/scripts/his/: set_height_action_server.py  set_init_pose_server.py  set_tar_pose_server.py  set_width_action_server.py  smach_dec.py  smach_decision.py  smach_sim_tasks7.py  smach_test.py
v2n/: CMakeLists.txt  package.xml
v2n/config/: mqtt_login.yaml
v2n/include/: sub_cloud.h
v2n/launch/: mqtt.launch  v2n.launch
v2n/scripts/: agv_status_report.py  dis_odom.bag  mqtt_odom_pub.py  set_model.py  sub_cloud.py  四元数变换.py
v2n/scripts/his/: cal_dis.py  cotton_job_take_publish.py  draw.py  job_take_publish.py
v2n/sh/: install_paho.sh  v2n.desktop  v2n.sh
v2n/src/: pub_cloud.cpp  sub_cloud.cpp
v2n/src/his/: listener.cpp  main.cpp  mqtt_demo.cpp  talker.cpp
(+179 files in other folders)
