<?xml version="1.0"?>
<package format="2">
    <name>hybrid_a_star</name>
    <version>0.0.0</version>
    <description>The hybrid_a_star package</description>
    <maintainer email="849742405@qq.com">Zhang Zhimeng</maintainer>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <build_depend>tf</build_depend>
	
  <build_depend>car_interfaces</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>car_interfaces</exec_depend>
  

  <export>
  </export>
</package>
